@@ -1,5 +1,5 @@
 AUX hg_pull.trac_0.12.patch 468 RMD160 8bfd2ec1c64fbfb9ad5e4e87ef24c85f8157a63f SHA1 9eec2b8ed02bc21214e6c3ca8a6d450c11f1887d SHA256 0c96661f348a64b0befb1fd851ca87424b6696152df4d61249abbb6e8752491e
 DIST Bitten-0.6b3.tar.gz 338511 RMD160 cb808a0afc9da1f2312ea2845c257a9faa60dcd4 SHA1 a03c28a245af38aa14793ddd39fd4d826d6e3589 SHA256 d3167fe928bb8d61e4367d71a6c286915c58f435b155c1886e0fea141f0501a8
-EBUILD bitten-0.6_beta3-r1.ebuild 961 RMD160 2fe10cbcaaf89812b4911d7fb3a90ceb20fce940 SHA1 f34e213c9c00fab278453140845e5543165424b5 SHA256 29a97c8f8764d9c3d1b01fe1f19d8b5ed08d0465ed791b887eb1c46dae8bc9f0
-MISC ChangeLog 673 RMD160 d1c6feca6f767c59a95484e57697a6e81afe920c SHA1 9a8a6306d5324c29bf2282d82e960edc8d87b268 SHA256 28798325647de7588a02358ff7d2772348e2f3e1c2adfd85989446a6164cc6fd
+EBUILD bitten-0.6_beta3-r1.ebuild 954 RMD160 1fca6e23649ff1a93fae809ffa487e406f532c37 SHA1 59535e32c5c2f3bfdbeef2296b8520c171e21ac5 SHA256 e6c0ea633916e885fe24daf3972dc4c70430ac5b41aaf7eb4d342f1ead0b7dfc
+MISC ChangeLog 827 RMD160 639377cb2596775d6d5463c002eccd933f280371 SHA1 07eb148d4b0d9eb594d99d3447f13d7f34e9099a SHA256 c9578e0e6798d9e98fb0ca961259718b877c3580fe3de5f0182cedcf4263ecdf
 MISC metadata.xml 283 RMD160 fbdf85ee235622cdd6958f5d402251f93cf39dd2 SHA1 34527d72689b8c81db986804c5731733b0fe2c50 SHA256 3b3cb322bf5e1794eca29ea417a568842380e3e597f7ce2d108456cac357795e
