@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Feb 2011; Nickolaj Stjujsckij <sterkrig@home.no>
+  bitten-0.6_beta3-r1.ebuild:
+  Support installation for multiple Python versions (like Trac itself)
+
   24 Feb 2011; Nickolaj Stjujsckij <sterkrig@home.no> -bitten-0.6_beta2.ebuild,
   -bitten-0.6_beta3.ebuild:
   Drop old/unpatched betas
